[metadata]
name = UK Bin Day
version = 0.1.0
description = Retrieve Bin Collection Dates for some Local Authorities.
author = Tim
author_email = snail-coupe@outlook.com
license = MIT License
licence_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
install_requires =
    
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ukbins = ukbinday.__main__:main
